@@ -20,8 +20,6 @@
 #ifndef VIFM__FILETYPE_H__
 #define VIFM__FILETYPE_H__
 
-#include "utils/test_helpers.h"
-
 #define VIFM_PSEUDO_CMD "vifm"
 
 struct matcher_t;
@@ -124,10 +122,6 @@ void ft_assoc_record_add_all(assoc_records_t *assocs,
 
 /* After this call the structure contains NULL values. */
 void ft_assoc_records_free(assoc_records_t *records);
-
-TSTATIC_DEFS(
-	void replace_double_comma(char cmd[]);
-)
 
 #endif /* VIFM__FILETYPE_H__ */
 
