@@ -370,6 +370,8 @@
 	Fixed incorrect treating of files with colons in their names for menus and
 	custom views.  Thanks to aleksejrs.
 
+	Fixed not squashing double commas in description of :file[x]type commands.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
